--- a/style.css
+++ b/style.css
@@ -58,10 +58,7 @@
   }
 
 
-  .row {
-    display: flex;
-    justify-content: center;
-  }
+ 
 /* 
   .row > * {
     margin: auto;
@@ -75,24 +72,6 @@
     text-align: left;
     font-size: 14px;
   }
-  
-/*   .menu ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-  } */
-  
-/*   .menu li {
-    padding: 8px;
-    margin-bottom: 7px;
-    background-color: #33b5e5;
-    color: #ffffff;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  }
-  
-  .menu li:hover {
-    background-color: #0099cc;
-  } */
   
   aside {
     background-color: #aa25df;
@@ -116,6 +95,7 @@
   /* For mobile phones: */
   [class*="col-"] {
     width: 100%;
+    height: auto;
   }
 
   @media only screen and (min-width: 600px) {
@@ -132,6 +112,11 @@
     .col-s-10 {width: 83.33%;}
     .col-s-11 {width: 91.66%;}
     .col-s-12 {width: 100%;}
+
+    .row {
+        display: flex;
+        justify-content: center;
+    }
   }
 
   
@@ -149,4 +134,9 @@
     .col-10 {width: 83.33%;}
     .col-11 {width: 91.66%;}
     .col-12 {width: 100%;}
+
+    .row {
+        display: flex;
+        justify-content: center;
+    }
   }
